--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-localstring(https://github.com/jjhot/JGX-COMMUNITY)
+localstring(https://github.com/jjhot/JGX-COMMUNITY/Scripter/JGX/Lua/loader.Lua ' , true))()
